Auth login refactor and front-end

--- a/src/invensys.auth.server/ClientApp/src/app/app.component.html
+++ b/src/invensys.auth.server/ClientApp/src/app/app.component.html
@@ -1,9 +1,1 @@
-<h1>{{ title }}</h1>
-
-<ul>
-    <li *ngFor="let user of users">
-        {{user.authUserId}}
-    </li>
-</ul>
-
-<mat-slide-toggle>Toggle me!</mat-slide-toggle>
+<app-nav></app-nav>
