--- a/src/invensys.auth.server/ClientApp/src/app/register/register.component.html
+++ b/src/invensys.auth.server/ClientApp/src/app/register/register.component.html
@@ -1,17 +1,15 @@
 <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
-    <h2>Register</h2>
-    <mat-form-field appearance="fill">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Enter your username" name="username"
-        [(ngModel)] ="model.username">
+    <h2>Sign Up</h2>
+    <mat-form-field>
+        <mat-label>User Name</mat-label>
+        <input matInput placeholder="Enter your username" name="userName" [(ngModel)]="model.userName">
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
-        <mat-label>Email</mat-label>
-        <input matInput type="password" placeholder="Enter your password" name="password"
-        [(ngModel)] ="model.password">
+    <mat-form-field>
+        <mat-label>Password</mat-label>
+        <input matInput type="password" placeholder="Enter your password" name="password" [(ngModel)]="model.password">
     </mat-form-field>
 
-    <button mat-raised-button color="primary" type="submit">Register</button>
-    <button mat-raised-button color="primary" type="submit" (click)="cancel()">Cancel</button>
-</form> 
+    <button mat-button color="primary" type="submit" cdkFocusInitial>Register</button>
+    <button mat-button color="primary" (click)="cancel()">Cancel</button>
+</form>
