--- a/src/invensys.auth.server/ClientApp/src/app/nav/nav.component.html
+++ b/src/invensys.auth.server/ClientApp/src/app/nav/nav.component.html
@@ -47,7 +47,8 @@
 
     <mat-sidenav-content>
         <div class="content mat-elevation-z8">
-            <app-landing-dashboard></app-landing-dashboard>
+            <div>Hello</div>
+            <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
