--- a/src/invensys.auth.server/ClientApp/src/app/modules/authentication/components/login/login.component.html
+++ b/src/invensys.auth.server/ClientApp/src/app/modules/authentication/components/login/login.component.html
@@ -15,4 +15,5 @@
 
 <div mat-dialog-actions align="end">
     <button mat-button (click)="login()" cdkFocusInitial>Login</button>
+    <button mat-button (click)="login()" cdkFocusInitial>Login</button>
 </div>
